# kanboost

./: .gitignore  404.html  AI_REVIEW_LOOP.md  CLAUDE.md  Dockerfile  LICENSE  MIGRATION.md  OUTREACH_DRAFT.md  README.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml  publish.yml  tests.yml
api/: index.html
benchmark_v1/: index.html
docs/: api.md  benchmark_v1.md  index.md  installation.md  roadmap.md
docs/guide/: calibration.md  classification.md  editing-dashboard.md  imbalance.md  interactions.md  interpretability.md  mlops.md  serving.md  symbolic-export.md  training-speed.md  tuning-with-kantun.md
examples/: benchmark_uci.py  benchmark_vs_kaam_paper.ipynb  churn_poc.py
guide/calibration/: index.html
guide/classification/: index.html
guide/editing-dashboard/: index.html
guide/imbalance/: index.html
guide/interactions/: index.html
guide/interpretability/: index.html
guide/mlops/: index.html
guide/serving/: index.html
guide/symbolic-export/: index.html
guide/training-speed/: index.html
guide/tuning-with-kantun/: index.html
installation/: index.html
kanboost/: __init__.py  _base.py  _dashboard_app.py  accel.py  calibration.py  classifier.py  config.py  dashboard.py  editing.py  encoders.py  experimental.py  imbalance.py  interactions.py  logging_utils.py  losses.py  metrics.py  mlflow_utils.py  mlhub.py  observability.py  pipeline.py  regressor.py  serving.py  symbolic.py
kanboost/core/: __init__.py  base.py  classifier.py  config.py  encoders.py  regressor.py
kanboost/interpret/: __init__.py  editing.py  (+1 more)
remote/: generate_cc11_covid_eeg_notebook.py
roadmap/: index.html
search/: search_index.json
tests/: test_accel.py  test_calibration.py  test_config.py  test_dashboard.py  test_deepkan.py  test_editing.py  test_experimental.py  test_imbalance.py  test_interactions.py  test_kanboost.py  test_kantun_integration.py  test_local_registry.py  test_logging_utils.py  test_mlflow_utils.py  test_mlhub.py  test_observability.py  test_pipeline.py  test_predict_cache.py  test_serving.py  test_symbolic.py
(+54 files in other folders)
