[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kanboost"
version = "1.2.0"
description = "Gradient boosting with Kolmogorov-Arnold Network (KAN) learners -- an interpretable alternative to tree-based boosting (XGBoost/LightGBM/CatBoost)."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Tuama M Hamzah"}
]
dependencies = [
    "pykan>=0.2.5",
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=1.5",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "sympy>=1.12",
    "pyyaml>=5.1",
    "matplotlib>=3.5",
    "tqdm>=4.60",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
api = ["fastapi>=0.100", "pydantic>=2.0", "uvicorn>=0.23"]
dashboard = ["streamlit>=1.30"]
docs = ["mkdocs-material>=9"]
mlhub = ["requests>=2.28"]
mlflow = ["mlflow>=2.10"]

[project.urls]
Homepage = "https://github.com/tuamah/kanboost"

[tool.setuptools.packages.find]
include = ["kanboost", "kanboost.*"]
